[package]
name = "yarvk"
version = "0.1.0"
edition = "2021"

[features]
default = ["max_memory_allocation_count_check",]
max_memory_allocation_count_check = []

[dependencies]
ash = "0.37.0"
rustc-hash = "1.1.0"
raw-window-handle = "0.3"
parking_lot = "0.12.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.raw-window-metal]
version = "0.1"