[package]
name = "yarvk"
version = "0.1.0"
edition = "2021"

[features]
default = ["max_memory_allocation_count_check", "memory_alignment"]
max_memory_allocation_count_check = []
memory_alignment = []

[dependencies]
ash = "0.37.0"
rustc-hash = "1.1.0"
raw-window-handle = "0.3"
derive_more = "0.99.17"
lazy_static = "1.4.0"
rayon = "1.5.3"
crossbeam-queue = "0.3.6"
dashmap = "5.4.0"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.raw-window-metal]
version = "0.1"